Redo cusel assign to avoid side effects. Refactor and cleanup projects controller, routes, views. Apply new design and functionality for projcts list page. Add fork button and fix fork. Apply gap repo during repo fork. Apply attr_accessible for projects. Cleanup locales. Fix new_build link ability check. Refs #195

--- a/app/assets/stylesheets/design/custom.scss
+++ b/app/assets/stylesheets/design/custom.scss
@@ -442,3 +442,5 @@ table.wiki .history .td2 .name span.username {
     text-overflow: ellipsis;
     width: 164px;
 }
+
+#fork-and-edit {display:block;}
